// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelect snapshots test collection is Multiselect component render right? 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="multiselect-input"
        name="test"
        placeholder="placeholder"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`MultiSelect snapshots test collection is Multiselect component with hard data render right? 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="multiselect-input"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          Amsterdam
        </li>
        <li
          class="suggestion-item"
        >
          Berlin
        </li>
        <li
          class="suggestion-item"
        >
          Prague
        </li>
        <li
          class="suggestion-item"
        >
          Saint-Petersburg
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect snapshots test collection is Multiselect component with some data and some selected items render right? 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <div
        class="multiselect-tags-container"
      >
        <span
          class="tags-item"
        >
          Berlin
          <span
            class="tags-icon icon-default"
          />
        </span>
        <span
          class="tags-item"
        >
          Saint-Petersburg
          <span
            class="tags-icon icon-default"
          />
        </span>
      </div>
      <input
        aria-invalid="false"
        autocomplete="off"
        class="multiselect-input"
        name="test"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          Amsterdam
        </li>
        <li
          class="suggestion-item"
        >
          Prague
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`MultiSelect snapshots test collection is Multiselect component with some data render right? 1`] = `
<div>
  <div
    class="multiselect-wrapper"
  >
    <div
      class="multiselect-input-wrapper"
    >
      <input
        aria-invalid="false"
        autocomplete="off"
        class="multiselect-input"
        name="test"
        value=""
      />
    </div>
    <div
      class="suggestion-wrapper visible"
    >
      <ul
        class="suggestion-list"
      >
        <li
          class="suggestion-item"
        >
          Amsterdam
        </li>
        <li
          class="suggestion-item"
        >
          Berlin
        </li>
        <li
          class="suggestion-item"
        >
          Prague
        </li>
        <li
          class="suggestion-item"
        >
          Saint-Petersburg
        </li>
      </ul>
    </div>
  </div>
</div>
`;
